website/resources/css/menu.css
*{
    padding: 0;
    margin: 0;
}

html, body{
    height: 100%;
    background-color: #E5E5E5;

}

hr{

    width: 95%;
    margin: auto;
    margin-bottom: 10px;
    
}

a {
    text-decoration: none;
}
/*Menu section*/

.categories{
    text-align: center;
    position: fixed;
    display: block;
    float: left;
    width: 67%;
    z-index: 100;
    background-image: url("../images/Res-background/Olive-Garden.jpg");
    background-color: rgba(0,0,0,.5);
    background-size: cover; 
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-blend-mode: darken;
    border-bottom-right-radius: 30px;
}

#menu-section{
    float: left;
    width:70%;
    height: 100vh;
    box-sizing: border-box;
    background-color: #F2EFE4;
    overflow-y: auto;
}

#menu-section hr{
    width: 80%;
}
/**Food category is done with scrollbar. Just need the option to click the image*/
.scrollbar-category{
    overflow-x: auto;
    height: auto;
    width: 90%;
    margin-top: 10px;
    margin-left: auto;
    margin-right: auto;
    white-space: nowrap;
}

.category-item{
    /*display: inline;*/
    /*align-items: center;*/
    /*justify-content: center;*/
    /*margin: 6px 0;*/
    /*background: #333;*/
    /*margin-right: 3%;*/
    /*color: #fff;*/
    /*text-align: center;*/
    /*border-radius: 50%;*/
    /*width: 85px;*/
    /*height: 85px;*/
    /*text-decoration: none;*/
    /*cursor: pointer;*/
    /*box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
/*       display: inline-flex;
    align-items: center;
    justify-content: center;
    margin: 6px 0;
    background: #e8e8e8;
    margin-left: 10px;
    margin-right: 3%;
    color: #083755;
    text-align: center;
    border-radius: 50%;
    width: 85px;
    height: 85px;
    text-decoration: none;
    transition: 0.2s ease; */
  
    display: inline-block;
    color: #333;
    /*padding: 13px;*/
    min-width: 7vw;
    margin: 0 0.6vw 0 0.6vw;
    /*margin: 0 1vw;*/
    min-height: 7vw;
    position: relative;
    outline: none;
    font-family: CoreSans, sans-serif;
    text-decoration: none;
    border-radius: 50%;
    box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2)
}

.category-item-overlay{
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: rgba(0,0,0,0.7);
    z-index: 2;
    /*text-align: center;*/
    position: absolute;
    top:0;
    left:0;
    display: flex;
    opacity: 80%;
    justify-content: center; /* align horizontal */
    align-items: center; /* align vertical */
    transition: opacity 0.4s;
    /*word-break:break-all;*/
}

.category-item p{
    font-family: CoreSans, sans-serif;
    font-size: 1em;
    z-index: 4;
    color: white;
    opacity: 100%;
    font-weight: 400;
    /*width: 75%;*/
    /*height: 75%;*/
    max-width: 80%;
    max-height: 75%;
    /*border: 1px solid fuchsia;*/
    justify-content: center; /* align horizontal */
    align-items: center; /* align vertical */
    white-space: normal;
    /*overflow: visible;*/
    word-break: break-all;
    overflow-wrap: break-word;
}


.category-item-overlay:hover{
    opacity: 100%;
}

.category-item img{
    border-radius: 50%;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 1;
    position: absolute;
    top:0;
    left:0;
/* }

.category-item:hover{
    background:#c5c5c5;
}

.category-item:active{
    background: rgb(223, 223, 223);
}

.category-item h5{
    font-size: 16px;
}

.heading{
    display: flex;
    align-items: left;
    position: relative;
}

.heading p{
    background-color: #FF5C00;
    align-self: center;
    font-size: 18px;
    width: 30px;
    height: auto;
    border-radius: 5px;
    font-family: 'Roboto', sans-serif;
    color: #fff; */
}

/*.category-item h5{*/
/*    font-size: 16px;*/
/*    font-weight: lighter;*/
/*    position: absolute;*/
/*}*/



.heading-text {
    color: #fff;
    font-family: 'Roboto', sans-serif;
    font-weight: bolder;
}

.cart-heading{
    color: black;
    font-family: 'Roboto',sans-serif;
    font-weight: bolder;
}


/*************************************************************************************/
/*menu-list*/

.menulist {
    position: relative;
}

/*html {*/
/*    scroll-padding-top: 40vh; !* height of sticky header *!*/
/*}*/
:target {
    position: relative;
    display: block;
    scroll-margin-top: 25vh; }

.menu-category-namee{
    display: inline-block;
    font-size: 20px;
    /*top: -10vh;*/
    /*margin-top: -10vh;*/
    /*padding-top: 10vh;*/
    /*max-height: 3vh;*/
}

.huh{
    height: 10px;
}


/*:target::before {*/
/*    content: "";*/
/*    display: block;*/
/*    height: 60px; !* fixed header height*!*/
/*    margin: -60px 0 0; !* negative fixed header height *!*/
/*}*/

.menu-category-name-underlined{
    width: 20%;
    margin: 0;
    margin-top: 10px;
}

.menu-categories{
    margin-left: 10px;
    /*top: -10vw;*/
    margin-top: 50px;
    width: 95%;
}

.menu-categories > *{
}

.menu-categories:first-child{
    margin-top: 200px;
    width: 95%;
}

.menu-category-grouped-items{
    margin-top: 20px;
}
  
.menu-category-item{
    position: relative;
    background-color: #333;
    width: 250px;
    height: 250px;
    border-radius: 50%;
    text-align: justify;
    border: 1px solid #333;
    display: inline-block;
    margin-left: 20px;
    margin-top: 20px;
    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.menu-category-item h5{
    text-align: center;
    margin-top: 5px;
    overflow-x: none;
}

.menu-category-item-image{
    border-radius: 50%;
    width: 100%;
    height: 100%;
    display: inline;
    object-fit: cover;
}


.menu-category-item-image-overlay{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background:rgba(0,0,0, 0.75);
    color: #fff;
    font-weight: lighter;
    font-family: 'Quicksand', sans-serif;
    display: flex;/*display text in center*/
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    opacity: 0;/*makes the text to be hovered invisible*/
    transition: opacity 0.25s;/*animation for the hovered page*/  
}

.menu-category-item-image-overlay:hover{
    opacity: 1;/*show the text when image is hovered*/
    cursor: pointer;
}

/*Animation: Text is pushed up when image is hovered*/
.menu-category-item-image-overlay > *{
    transform: translateY(20px);
    transition: transform 1s;

}

.menu-category-item-image-overlay:hover > *{
    /*Text should come out from the bottom*/
    transform: translateY(0);
}

.menu-category-item-description{
    font-size: 13px;
    margin: 2px;
}

:target {

    /*padding-top: 200px;*/
}

/**************************************************************************/
/*For Menu modal*/

#menu-modal {
    height: 500px;
    width: 500px;
    border: 1px solid gray;
    background-color: #fff;
    border-radius: 50%;
    position: fixed;
    left: 30%;
    top: 2%;
    z-index: 300;
    overflow: hidden;
}


.food-item-modal-image {
    height: 200px;
    width: 200px;
    border: 1px solid gray;
    border-radius: 50%;
    position: absolute;
    left: 35%;
    top: 5%;
    background-size: 200px;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.modal-food-price {
    margin-top: 10px;
}

#modal-description {
    position: absolute;
    top: 10%;
    left: 50%;
    transform: translateX(-50%);
    font-size: 24px;
    text-align: center;
}

.food-options {
    position: absolute;
    top: 28%;
    left: 50%;
    width: 400px;
    max-height: 165px;
    overflow-y: scroll;
    transform: translateX(-50%);
    background-color: whitesmoke;
    border: black 2px solid;
}

::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.checkbox-option, .radio-button-option{
    display: block;
    width: 95%;
    margin: 15px auto;
}

.food-options h3{
    margin: 5px;
}

.food-option-name{
    float: left;
}

.food-option-name:last-child{
    margin-bottom: 100px;
}

.food-option-price{
    text-align: right;
}

.food-option-price:last-child{
    margin-bottom: 10px;
}

.food-number-button {
    position: absolute;
    top: 65%;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
}

#num-food {
    height: 35px;
    width: 70px;
    margin: 3px;
    text-align: center;
    font-size: 20px;
    border-radius: 10px;
    outline: none;
}

#plus, #minus {
    height:30px;
    width: 30px;
    margin: 3px;
    text-align: center;
    font-size: 20px;
    border-radius: 50%;
    border: 3px solid black;
    background: none;
    outline: none;
    font-weight: bolder;
    transition: 0.2s ease;
}

#plus:hover, #minus:hover{
    cursor: pointer;
}

#plus:active, #minus:active{
    background: #c4c4c4;
}

#num-food {
    border: 1px solid #333;
}

input::-webkit-inner-spin-button {
-webkit-appearance: none;
margin: 0;
}

.modify-cart {
    position: absolute;
    display: inline-flex;
    top: 75%;
    left: 50%;
    transform: translateX(-50%);
}


.button-cancel-cart{
    height: 50px;
    width: 100px;
    text-align: center;
    border: none;
    background-color: lightgray;
    margin-top: 10px;
    margin-left: 2em;
    border-radius: 10px;
    font-size: 16px;
    border: 1px solid #333;
    outline: none;
    transition: 0.2s ease;
}


.button-add-to-cart {
    height: 50px;
    width: 100px;
    text-align: center;
    border: none;
    background-color: lightgray;
    margin-top: 10px;
    border-radius: 10px;
    font-size: 16px;
    border: 1px solid #333;
    outline: none;
    transition: 0.2s ease;
}

.button-add-to-cart:hover, .button-cancel-cart:hover{
    cursor: pointer;
    background: #e4e4e4;
}

.button-save-to-cart {
    height: 50px;
    width: 170px;
    text-align: center;
    border: none;
    background-color: lightgray;
    margin-top: 10px;
    border-radius: 10px;
    font-size: 16px;
    border: 1px solid #333;

}


/***************************************************/
/*Cart section*/
/*Order div*/
#cart-section{
    display: flex;
    flex-direction: column;
    float: right;
    width: 30%;
    min-height: 97vh;
    max-height: 97vh;
    margin-bottom: 3vh;
    box-sizing: border-box;
}

.order-div{
    padding: 10px;
    margin: 3px 3px;
    overflow-y: auto;
    min-height:25vh;
    flex-grow: 30;
    background: url("../images/shopping-cart.png");
    background-repeat: no-repeat;
    background-size: 50%;
    background-color: #E5E5E5;
    background-blend-mode: overlay;
    background-position: 50% 50%;
}

#cart-section h2{
    text-align: center;
}

.heading-text{
    margin: 10px;
    padding: 5px 4px;
}




/*checkout-div*/
.checkout-div{
    width: 100%;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.checkout-div h4{
    align-self: center;
    font-size: 18px;
    margin-right:-1em;
}


.btnCheckout{
    outline: none;
    border: 2px solid black;
    border-radius: 15px;
    width: 40%;
    height: 30%;
    font-size: 24px;
    background-color: #FF5C00;
    margin-left: 5em;
    transition: 0.2s ease;
}

.btnCheckout:hover{
    color: white;
    background: #cf4c00;
    cursor: pointer;
}

